fixed homepage slider issue on tablet landscape

--- a/css/Sass/base/_mixins.scss
+++ b/css/Sass/base/_mixins.scss
@@ -12,6 +12,12 @@
 }
 
 
+@mixin tablet-landscape {
+	@media (min-width: #{$tablet-width}) and (max-width: #{$tablet-width+100}) {
+		@content;
+	}
+}
+
 @mixin tablet {
 	@media (min-width: #{$tablet-height}) and (max-width: #{$tablet-width - 1px}) {
 		@content;
@@ -36,6 +42,7 @@
 		@content;
 	}
 }
+
 
 @mixin not-desktop {
 	@media (max-width: #{$tablet-width}) {
