--- a/css/Sass/pages/_index.scss
+++ b/css/Sass/pages/_index.scss
@@ -32,6 +32,10 @@
 		height: auto;
 		padding: 30px;
 	}
+	@include tablet-landscape {
+		height: auto;
+		padding: 30px;
+	}
 }
 
 
