--- a/css/main.css
+++ b/css/main.css
@@ -487,6 +487,12 @@ footer {
   @media (min-width: 321px) and (max-width: 536px) {
     .jumbotron-slider-img {
       width: 100%; } }
+  @media (min-width: 537px) and (max-width: 767px) {
+    .jumbotron-slider-img {
+      width: 100%; } }
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .jumbotron-slider-img {
+      width: 100%; } }
 
 .jumbotron-slider-text {
   width: 50%;
@@ -729,6 +735,10 @@ footer {
   @media (min-width: 768px) and (max-width: 1023px) {
     .homepage-about {
       width: 100%;
+      height: auto;
+      padding: 30px; } }
+  @media (min-width: 1024px) and (max-width: 1124px) {
+    .homepage-about {
       height: auto;
       padding: 30px; } }
 
